force-app/main/default/objects/OrderItemSummary/fields/IsMarketingProduct__c.field-meta.xml
<CustomField>
    <fullName>IsMarketingProduct__c</fullName>
    <description>Filter to exclude Marketing SKUs from being exported to SAP</description>
    <formula>CONTAINS(Name, &quot;FREE GIFT&quot;)</formula>
    <inlineHelpText>Is Marketing Product</inlineHelpText>
    <label>Is Marketing Product</label>
    <type>Checkbox</type>
</CustomField>