force-app/main/default/objects/OrderItemSummary/fields/LotNumber__c.field-meta.xml
<CustomField>
    <fullName>LotNumber__c</fullName>
    <description>This field stores Lot Number from Amware</description>
    <inlineHelpText>Lot Number from Amwaree</inlineHelpText>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>