force-app/main/default/objects/OrderItemSummary/fields/sfcc_BundleProductGUID__c.field-meta.xml
<CustomField>
    <fullName>sfcc_BundleProductGUID__c</fullName>
    <description>This field stores Bundle Product GUID from SFCC</description>
    <inlineHelpText>Bundle Product GUID from SFCC</inlineHelpText>
    <label>SFCC Bundle Product GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>