force-app/main/default/objects/OrderItemSummary/fields/sfcc_SAPMaterialCode__c.field-meta.xml
<CustomField>
    <fullName>sfcc_SAPMaterialCode__c</fullName>
    <description>Its SAP Material Code that we will be receiving from SFCC</description>
    <inlineHelpText>SAP Material Code from SFCC</inlineHelpText>
    <label>SAP Material SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>