force-app/main/default/objects/OrderItemSummary/fields/sfcc_ThreePayUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>sfcc_ThreePayUnitPrice__c</fullName>
    <description>This is unit price of a 3-pay order line item that we will be receiving from SFCC</description>
    <inlineHelpText>This is unit price of a 3-pay order line item that we will be receiving from SFCC</inlineHelpText>
    <label>sfcc_ThreePayUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>