force-app/main/default/objects/OrderItemSummary/fields/SFMC_Cancel_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Cancel_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFMC Cancel email sent to customer or not</description>
    <label>SFMC_Cancel_Email_Sent</label>
    <type>Checkbox</type>
</CustomField>